# shellyctl

./: Cargo.toml  build.rs  shellymon.toml
src/: browse.rs  cli.rs  configdump.rs  configset.rs  download.rs  list.rs  main.rs
