[package]
name = "shellyctl"
version = "0.0.4"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/dmarion/shellyctl"
authors = ["dmarion"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
mdns-sd = "0.10"
prettytable = "0.10"
colored = "2"
crossterm = "0.27"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4"

[package.metadata.deb]
maintainer = "Damjan Marion <damjan.marion@gmail.com>"
extended-description = """\
A simple command to control shelly v2 devices"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/shellyctl", "usr/bin/", "755"],
  ["target/release/completions/shellyctl.bash", "usr/share/bash-completion/completions/shellyctl", "644"],
  ["target/release/completions/_shellyctl", "usr/share/zsh/site-functions/_shellyctl", "644"]
]
