[package]
name = "shellyctl"
version = "0.0.5"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/dmarion/shellyctl"
authors = ["dmarion"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3"
crossterm = "0.29"
ctrlc = "3"
env_logger = "0.10"
log = "0.4"
mdns-sd = "0.13"
prettytable = "0.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"

[package.metadata.deb]
maintainer = "Damjan Marion <damjan.marion@gmail.com>"
extended-description = """\
A simple command to control shelly v2 devices"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
  ["target/release/shellyctl", "usr/bin/", "755"],
  ["target/release/completions/shellyctl.bash", "usr/share/bash-completion/completions/shellyctl", "644"],
  ["target/release/completions/_shellyctl", "usr/share/zsh/site-functions/_shellyctl", "644"]
]
